# network-pong

./: README.md
client/: CMakeLists.txt  README.md  TODO.txt  main.cpp
client/include/: controller.h  model.h  network.h  settings.h  view.h
client/src/: controller.cpp  main.cpp  model.cpp  network.cpp  view.cpp
server/: go.mod  main.go
server/pongserv/: game.go  model.go  server.go
server/server/: main.go  server.go
